; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_hash.c_xenvif_get_hash_flags.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_hash.c_xenvif_get_hash_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenvif = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@XEN_NETIF_CTRL_HASH_ALGORITHM_NONE = common dso_local global i64 0, align 8
@XEN_NETIF_CTRL_STATUS_NOT_SUPPORTED = common dso_local global i32 0, align 4
@XEN_NETIF_CTRL_HASH_TYPE_IPV4 = common dso_local global i32 0, align 4
@XEN_NETIF_CTRL_HASH_TYPE_IPV4_TCP = common dso_local global i32 0, align 4
@XEN_NETIF_CTRL_HASH_TYPE_IPV6 = common dso_local global i32 0, align 4
@XEN_NETIF_CTRL_HASH_TYPE_IPV6_TCP = common dso_local global i32 0, align 4
@XEN_NETIF_CTRL_STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xenvif_get_hash_flags(%struct.xenvif* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xenvif*, align 8
  %5 = alloca i32*, align 8
  store %struct.xenvif* %0, %struct.xenvif** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.xenvif*, %struct.xenvif** %4, align 8
  %7 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @XEN_NETIF_CTRL_HASH_ALGORITHM_NONE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @XEN_NETIF_CTRL_STATUS_NOT_SUPPORTED, align 4
  store i32 %13, i32* %3, align 4
  br label %24

14:                                               ; preds = %2
  %15 = load i32, i32* @XEN_NETIF_CTRL_HASH_TYPE_IPV4, align 4
  %16 = load i32, i32* @XEN_NETIF_CTRL_HASH_TYPE_IPV4_TCP, align 4
  %17 = or i32 %15, %16
  %18 = load i32, i32* @XEN_NETIF_CTRL_HASH_TYPE_IPV6, align 4
  %19 = or i32 %17, %18
  %20 = load i32, i32* @XEN_NETIF_CTRL_HASH_TYPE_IPV6_TCP, align 4
  %21 = or i32 %19, %20
  %22 = load i32*, i32** %5, align 8
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* @XEN_NETIF_CTRL_STATUS_SUCCESS, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %14, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
